Replaced favicons | Improved Header Semantic tags

--- a/src/components/Layout/styles/Header.css
+++ b/src/components/Layout/styles/Header.css
@@ -20,13 +20,14 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #00baf0;
-  background: linear-gradient(to left, #f46b45, #eea849);
+  background-color: #7a4371;
+  /* background: linear-gradient(to left, #f46b45, #eea849); */
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
   height: 50px;
   padding: 1em;
 }
+
 .nav-container {
   display: flex;
   flex-direction: row;
