--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@300;400&family=Raleway:wght@300;400;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "poppins", sans-serif;
 }
