--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -537,7 +537,7 @@
 }
 
 .bg-color {
-  background-color: RGBA(13, 70, 83, 0.78);
+  background-color: rgba(0, 0, 0, 0.814);
   min-height: 650px;
 }
 
