--- a/src/styles/Testimonial.css
+++ b/src/styles/Testimonial.css
@@ -1,11 +1,12 @@
 .section-2 {
-  background: linear-gradient(to bottom, #000428, #004683);
-  animation: background-color 20s;
+  /* background: linear-gradient(to bottom, #000428, #004683); */
+  /* animation: background-color 20s; */
   padding: 34px 22px;
   margin: 0px 0px 0px 0px;
+  background-color: white;
 }
 
-@keyframes background-color {
+/* @keyframes background-color {
   0% {
     background: linear-gradient(to bottom, #000428, #004683);
   }
@@ -18,7 +19,7 @@
   100% {
     background: linear-gradient(-135deg, rgb(9, 102, 100), #3d124b, #20668f);
   }
-}
+} */
 
 .container .col-lg-4 {
   display: flex;
@@ -36,7 +37,7 @@
 
 .card .face {
   position: absolute;
-  color: #fff;
+  color: #000;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -72,7 +73,7 @@
 
 .card .face.front-face .designation {
   font-size: 0.8rem;
-  color: #ddd;
+  color: #000;
   letter-spacing: 0.8px;
 }
 
@@ -111,4 +112,9 @@
   .card {
     margin: 22px 0px;
   }
+}
+
+.testimonialHeadText{
+  text-align: center;
+  margin: 0px 0px 32px 0px;
 }
