footer background fixed and added background image in business solution

--- a/src/components/Layout/styles/Footer.css
+++ b/src/components/Layout/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: rgb(10, 47, 51);
+  background-color: #c5a1f9;
   padding: 22px 0px;
   color: white;
   width: 100%;
