Footer menu updated | Background fixed | media queries fixed

--- a/src/components/Layout/styles/Footer.css
+++ b/src/components/Layout/styles/Footer.css
@@ -1,12 +1,13 @@
 .footer {
-  background-color: #c5a1f9;
+  /* background-color: #c5a1f9; */
+  background-color: #a886f3;
   padding: 22px 0px;
   color: white;
   width: 100%;
 }
 
 .footer .container {
-  padding: 44px;
+  padding: 34px 44px;
 }
 
 .footer-column ul {
@@ -25,14 +26,14 @@
 
 .footer-content {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
 .footer-content .left-footer-content {
-  width: 300px;
+  max-width: 300px;
 }
 
 .left-footer-content #content-1 .footer-brand {
@@ -61,9 +62,68 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: 44px;
+  gap: 80px;
 }
 
-#content-1, #content-2, #content-3, #content4 {
+@media only screen and (max-width: 461px) {
+  .mid-footer-content {
+    gap: 22px;
+    justify-content: center;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+
+  .left-footer-content #content-1 .footer-brand {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #content-4 .footer-content-list ul {
+    justify-content: center;
+    gap: 8px;
+  }
+
+  #content-4 .footer-content-list ul li {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+#content-1,
+#content-2,
+#content-3,
+#content4 {
   letter-spacing: 1.5px;
+}
+
+.footer-content-list li > a {
+  color: white !important;
+}
+
+.footer-content-list ul {
+  list-style: none;
+  padding: 0px;
+}
+
+.footer-content-list ul li span {
+  font-weight: lighter;
+}
+
+.right-footer-content #content-4 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+#content-4 .footer-content-list ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
