--- a/src/styles/Testimonial.css
+++ b/src/styles/Testimonial.css
@@ -114,7 +114,11 @@
   }
 }
 
-.testimonialHeadText{
+.testimonialHeadText {
   text-align: center;
   margin: 0px 0px 32px 0px;
+}
+
+.section-2 .container h2 {
+  color: #a87fff !important;
 }
