--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,5 @@
 #ft-form {
-  font-family: inherit;
+  font-family: "Rubik", "sans-serif";
   font-size: 100%;
   line-height: 1.15;
 }
@@ -13,7 +13,7 @@
 #ft-form input,
 #ft-form select,
 #ft-form textarea {
-  font-family: inherit;
+  font-family: "Rubik", "sans-serif";
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
@@ -22,10 +22,6 @@
 #ft-form select {
   text-transform: none;
 }
-
-/* #ft-form [type="submit"] {
-  -webkit-appearance: button;
-} */
 
 #ft-form legend {
   padding: 0;
@@ -42,14 +38,12 @@
 }
 
 #ft-form html {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Rubik", "sans-serif";
   line-height: 1.5;
 }
 
 #ft-form body {
-  font-family: inherit;
+  font-family: "Rubik", "sans-serif";
   line-height: inherit;
 }
 
@@ -437,13 +431,11 @@
 }
 
 #ft-form .btns {
-  text-align: right;
+  text-align: left;
   margin-top: 3rem;
 }
 
-#ft-form .btns > input[type="button"],
-#ft-form .btns > input[type="reset"],
-#ft-form .btns > input[type="submit"] {
+#ft-form .btns > input[type="reset"] {
   display: inline-block;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   padding-left: 1.5rem;
@@ -453,29 +445,26 @@
   line-height: 1.25rem;
   border-width: 1px;
   border-radius: 0.375rem;
-  border-color: rgba(12, 184, 182, 0.91);
-  background-color: rgba(12, 184, 182, 0.91);
+  background-color: #5d4296;
   cursor: pointer;
   color: #fff;
   margin-left: 0.5rem;
 }
 
-#ft-form .btns > input[type="button"]:focus,
-#ft-form .btns > input[type="reset"]:focus,
-#ft-form .btns > input[type="submit"]:focus {
+#ft-form .btns > input[type="reset"]:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-  border-color: rgba(12, 184, 182, 0.91);
+  border-color: #5d4296;
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px rgba(199, 210, 254, 0.5), 0 0 #0000;
 }
 
 #ft-form .btns > input[type="submit"] {
-  background-color: rgba(12, 184, 182, 0.91);
+  background-color: #5d4296;
   transition: background-color 0.1s;
 }
 
 #ft-form .btns > input[type="submit"]:hover {
-  background-color: rgb(21, 152, 150);
+  background-color: #5d4296;
   transition: 0.6s all ease;
 }
 
@@ -484,20 +473,29 @@
 }
 
 .appointment {
-  background-color: #e5e7eb;
+  /* background-color: #e5e7eb; */
   padding: 12px;
+
+  background-color: #8ec5fc;
+  background-image: linear-gradient(332deg, #ffdada 0%, #e1c0fffa 100%);
 }
 
 .input-border {
-  border: 1px solid #159896 !important;
+  border: 1px solid #a87fff !important;
 }
 
 .why-appoint-head {
-  color: #159896;
+  color: #000;
+}
+
+@media only screen and (max-width: 768px) {
+  .why-appoint-head {
+    margin-top: 22px;
+  }
 }
 
 .appoint-form-head {
-  color: #159896;
+  color: #000;
 }
 
 @media screen and (max-width: 268px) {
@@ -537,7 +535,7 @@
 }
 
 .bg-color {
-  background-color: rgba(0, 0, 0, 0.814);
+  background-color: rgba(0, 0, 0, 0.699);
   min-height: 650px;
 }
 
@@ -555,20 +553,27 @@
 }
 
 .banner-text h1 {
-  font-family: "Candal", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 35px;
   text-transform: uppercase;
   padding-bottom: 15px;
 }
 
-.btn-appoint,
-.btn-appoint:hover,
-.btn-appoint:focus {
+.btn-appoint {
   margin-top: 30px;
   padding: 10px 20px;
   font-size: 12px;
-  background-color: rgba(12, 184, 182, 0.91);
+  background-color: #5d4296;
   border-radius: 3px;
+  color: #fff;
+  outline: 1px solid #5d4296;
+  transition: all;
+  transition-timing-function: linear;
+  transition-duration: 0.25s;
+}
+
+.btn-appoint:hover {
+  outline: 1px solid #5d4296;
   color: #fff;
 }
 
@@ -596,4 +601,29 @@
   margin: 44px 0px;
   font-weight: 600;
   font-size: 2rem;
+}
+
+.appoint-submit-btn {
+  background-image: linear-gradient(
+    to right,
+    #9d50bb 0%,
+    #6e48aa 51%,
+    #9d50bb 100%
+  );
+  padding: 12px 34px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 6px;
+  outline: 1px solid
+    linear-gradient(to right, #9d50bb 0%, #6e48aa 51%, #9d50bb 100%);
+}
+
+.appoint-submit-btn:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
 }
