Improved navbar design

--- a/src/components/Layout/styles/Header.css
+++ b/src/components/Layout/styles/Header.css
@@ -18,9 +18,12 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #a87fff;
-  /* background: linear-gradient(to left, #f46b45, #eea849); */
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: linear-gradient(
+    to right,
+    #9d50bb 0%,
+    #6e48aa 51%,
+    #9d50bb 100%
+  );
   color: #fff;
   height: 50px;
   padding: 1em;
