--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -33,10 +33,6 @@
   color: rgba(9, 9, 9, 0.842);
 }
 
-.hero-head > span {
-  color: #a87fff;
-}
-
 .left-hero-section,
 .right-hero-section {
   margin: 44px 0px;
@@ -62,8 +58,6 @@
   color: white;
   box-shadow: 0 0 20px #eee;
   border-radius: 6px;
-  outline: 1px solid
-    linear-gradient(to right, #9d50bb 0%, #6e48aa 51%, #9d50bb 100%);
 }
 
 .hero-btn-1:hover {
@@ -79,8 +73,6 @@
     #6e48aa 51%,
     #9d50bb 100%
   );
-  margin: 10px;
-  padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -88,8 +80,6 @@
   color: white;
   box-shadow: 0 0 20px #eee;
   border-radius: 6px;
-  outline: 1px solid
-    linear-gradient(to right, #9d50bb 0%, #6e48aa 51%, #9d50bb 100%);
 }
 
 .hero-btn-2:hover {
@@ -100,4 +90,27 @@
 
 .hero-head p {
   color: rgb(93, 93, 93);
+}
+
+.text-gradient {
+  font-weight: 800;
+  color: darkblue;
+}
+
+@supports (--css: variables) {
+  .text-gradient {
+    background-image: linear-gradient(
+      to right,
+      #9d50bb 0%,
+      #6e48aa 51%,
+      #9d50bb 100%
+    );
+    color: transparent;
+    background-clip: text;
+  }
+
+  .text-gradient::selection {
+    color: white;
+    background: darkorchid;
+  }
 }
