Implemented founders-section and about-us section in about page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   font-family: "Rubik", sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
+*,
+html,
+body {
+  scroll-behavior: smooth !important;
 }
