--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -18,7 +18,7 @@
 
 .founders-card {
   width: 100% !important;
-  border: 2px solid black !important;
+  height: auto !important;
 }
 
 .founder-img {
