--- a/src/styles/BusinessProblemHome.css
+++ b/src/styles/BusinessProblemHome.css
@@ -102,11 +102,11 @@
 }
 
 .business-prob-section {
-  background: url(../assets/images/home/business.jpg);
-  background-position: top;
+  /* background: url(../assets/images/home/business.jpg); */
+  /* background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: scroll;
+  background-attachment: scroll; */
 }
 
 @media only screen and (max-width: 1755px) {
