--- a/src/styles/WhyUsSectionHome.css
+++ b/src/styles/WhyUsSectionHome.css
@@ -51,7 +51,7 @@
 }
 
 .whyUsSection {
-  background: url(../assets/images/home/bg-section.jpg);
+  background: url(../assets/images/home/bg-section.webp);
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: top;
