--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -74,7 +74,7 @@
 }
 
 .founder-section-bg {
-  background-image: linear-gradient(198deg, #ede9f7aa 0%, #ffffff 100%);
+  background-image: linear-gradient(198deg, #ede9f7aa 0%, rgb(241, 233, 233) 100%);
 }
 
 .carousel .carousel-slider .control-arrow {
