Rendered whyUs Section through array and objects

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -73,6 +73,10 @@
   background: none;
 }
 
+.carousel .control-dots .dot {
+  background-color: #a87fff !important;
+}
+
 .founder-section-bg {
   background-image: linear-gradient(
     198deg,
