--- a/src/styles/Course.css
+++ b/src/styles/Course.css
@@ -37,6 +37,12 @@
   overflow: hidden;
 }
 
+@media only screen and (max-width : 768) {
+  .course-card {
+    width: 400px;
+  }
+}
+
 .card-img:hover img {
   transform: scale(1.1);
   transition-property: all;
