--- a/src/styles/ContactFromHome.css
+++ b/src/styles/ContactFromHome.css
@@ -1,5 +1,5 @@
 .contact-home-bg {
-  background-image: url(../assets/images/contact/c4.webp);
+  background-image: url(../assets/images/contact/c4.jpg);
   min-height: 500;
   width: 100%;
   background-attachment: fixed;
