--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -32,3 +32,37 @@
     gap: 0px !important;
   }
 }
+
+/*! Project Testimonial */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.testimonial-container {
+  height: auto;
+  max-width: 1200px;
+  margin: 0;
+  margin: auto;
+  /* text-align: center; */
+  display: grid;
+  justify-items: center;
+  justify-content: center;
+}
