--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 32px 44px;
   background-image: linear-gradient(198deg, #bba9e2aa 0%, #ffffff 100%);
+  min-height: 800px;
 }
 
 .hero-section {
@@ -12,6 +13,7 @@
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
+  min-height: 800px;
 }
 
 .hero-btn > .hero-btn-1 {
