--- a/src/styles/WhyUsSectionHome.css
+++ b/src/styles/WhyUsSectionHome.css
@@ -21,6 +21,8 @@
   transition-timing-function: linear;
 }
 
+/* rgb(72 46 95 / 25%) 0px 13px 54px 8px, rgb(67 12 117 / 55%) 0px 8px 21px 3px */
+
 .whyUsCard:hover {
   transform: scale(1.05) !important;
 }
