Implemented sidebar auto collapsed functionality | rendered event registrations in the page | Used some tricks to make page responsive

--- a/src/styles/AdminStyles/AdminMenu.css
+++ b/src/styles/AdminStyles/AdminMenu.css
@@ -12,7 +12,13 @@
   text-decoration: none;
   color: black;
 }
-
+.adminMenu {
+  width: 400px;
+}
 .adminSidebar {
-  height: 75vh;
+  height: 80vh;
+}
+
+.ps-sidebar-container {
+  border-radius: 4px !important;
 }
