--- a/src/components/Layout/styles/Header.css
+++ b/src/components/Layout/styles/Header.css
@@ -48,8 +48,8 @@
 
 .user-profile {
   /* display: inline-block !important ; */
-  /* width: 44px;
-  height: 44px; */
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   cursor: pointer;
   font-weight: bold;
