--- a/src/components/Layout/styles/Header.css
+++ b/src/components/Layout/styles/Header.css
@@ -54,6 +54,7 @@
   cursor: pointer;
   font-weight: bold;
   font-size: 28px;
+  object-fit: cover;
   /* background-color: #6e48aa;
   background-color: #9d50bb; */
 }
