--- a/src/styles/UserStyles/Cart.css
+++ b/src/styles/UserStyles/Cart.css
@@ -15,7 +15,13 @@
   }
 }
 
+/* @media only screen and (max-width: 998px) {
+  .flex-cart {
+    justify-content: start !important;
+  }
+} */
+
 .cart-card img {
-  width: 180px;
+  width: 30rem;
   height: 140px;
 }
