--- a/src/components/Layout/styles/Header.css
+++ b/src/components/Layout/styles/Header.css
@@ -106,6 +106,17 @@
   text-decoration: none;
 }
 
+.btn-close {
+  /* background-image: linear-gradient(
+    to right,
+    #9d50bb 0%,
+    #6e48aa 51%,
+    #9d50bb 100%
+  ); */
+ 
+  /* background-color:  #6e48aa; */
+}
+
 .sidebar-list {
   display: flex;
   flex-direction: row;
